2008-07-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* RCS.cpp (RCS::RCS): If data file has been added to RCS, show its
	revision history properly sorted by the revision number in
	ascending order and automatically select the latest revision in
	the dialog

2008-07-24  vadim  <vadim@vk.crocodile.org>

	* init.cpp (guessExecPath): properly managing path to the bundle
	on Mac.

2008-07-22  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWWindow.cpp: Applied patch to make code compile with gcc 4.3 per
	http://svn.mandriva.com/cgi-bin/viewvc.cgi/packages/cooker/fwbuilder/current/SOURCES/fwbuilder-3.0.0-gcc43.patch

2008-07-21  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel.h (libfwbuilder): Added missing declarations for
	gcc 4.3 per bug #2023292: "fwbuilder 3.0.0 does not build"

	* (libfwbuilder) Applied patch for gcc 4.3 per bug #2023676:
	"libfwbuilder does not build against gcc 4.3".

	* (libfwbuilder) fwbuilder.pro: removed unnecessary override in
	target.path to make it install in a proper place on 64 bit
	machines'

2008-07-20    <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleTableModel::insertRow): fixed bug (no #)
	which caused crash on windows when new rule group was
	created. This happened only on win32.

2008-07-20  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::moveRule): fixed bug (no #): if
	rule set had several rule groups, moving rules within rule set did
	not work and caused weird effects.

	* NetworkIPv6.cpp (NetworkIPv6::NetworkIPv6): per bug #2023140:
	"Default prefix for IPv6 addresses" setting default netmask to /64
	for NetworkIPv6 object.

	* InterfaceDialog.cpp (InterfaceDialog::loadFWObject): fixed bug
	#2023141: "Can't set interface options". The GUI kept all controls
	in the interface object editor enabled when interface was child of
	a Host object, even though some controls do not apply to
	interfaces of a host. These controls were not saved into interface